# Crud-With-Ui

./: .gitignore  README.md  docker-compose.yml
client/src/: App.js
server/: dockerfile  mongod.conf  pyproject.toml
server/app/: main.py  settings.py
server/mongo_data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-12205260836743000237.wt  collection-0-9417153785970106296.wt  collection-2-9417153785970106296.wt  collection-4-9417153785970106296.wt  index-1-12205260836743000237.wt  index-1-9417153785970106296.wt  index-3-9417153785970106296.wt  index-5-9417153785970106296.wt  index-6-9417153785970106296.wt  sizeStorer.wt
server/mongo_data/diagnostic.data/: metrics.2025-06-13T18-00-09Z-00000  metrics.2025-06-13T18-03-48Z-00000  metrics.2025-06-13T18-14-59Z-00000
