[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "atlantika234",email = "suschenko234@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "motor (>=3.7.1,<4.0.0)",
    "mongoengine (>=0.29.1,<0.30.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
